dp3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
      - name: portal
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-mount
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-mount
        configMap:
          name: portal
