svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: login
  namespace: test
spec:
  selector:
    app: login
  ports:
  - port: 80
    targetPort: 80
