svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgot
  namespace: test
spec:
  selector:
    app: forgot
  ports:
  - port: 80
    targetPort: 80
