svc3.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: test
spec:
  selector:
    app: payment
  ports:
  - port: 80
    targetPort: 80
