ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: login.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: login
            port:
              number: 80
       - pathType: Prefix
        path: "/forgot"
        backend:
          service:
            name: forgot
            port:
              number: 80
  - host: payment.example.com
    http:
      paths:
      - pathType: payment
        path: "/"
        backend:
          service:
            name: service2
            port:
              number: 80
